--- a/checkout.html
+++ b/checkout.html
@@ -28,16 +28,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="trips.html">Book a Trip</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Weather
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Weather</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About Us</a>
@@ -53,6 +45,18 @@
           </div>
         </div>
       </nav>
+
+      <div class="container-fluid">
+        <h1>Checkout</h1>
+        <p style="color: black;"> Congratulations on choosing your dream cruise with Nordic Trips! As you prepare to finalize your booking, our checkout page 
+            ensures a seamless and convenient process. Review your selected trips, adjust quantities, and calculate your total cost before 
+            taking the final step. Our user-friendly interface allows you to customize your cruise experience to perfection. 
+            Whether you're embarking on a solo adventure or traveling with loved ones, our checkout page ensures that every detail is 
+            tailored to your preferences. Once you're ready, a single click is all it takes to secure your journey to the heart of the 
+            Nordic wonders. Get ready to create memories that will last a lifetime.
+        </p>
+        <h3>Purchase Your Cruise Tickets!</h3>
+      </div>
 
       <footer class="footer">
         © 2023 Nordic Trips. All rights reserved.
